# pictureframe

./: CMakeLists.txt  LICENSE  README.md  build.sh  frame.cpp  genimage.py  image_creator.py  install_lambda.sh  mateo_wmo.json  plan.md  requirements.txt  test.py  test_pi.py  weather.py  weather_bot.py
.github/workflows/: pipeline.yml
infra/: backend.tf  dev.tfvars  lambda.tf  main.tf  provider.tf  variables.tf
infra/lambda/: handler.py
lib/: DEV_Config.h  EPD.h
lib/utility/: EPD_5in65f.cpp  EPD_5in65f.h  epdif.cpp  epdif.h
main/: CMakeLists.txt  frame.cpp  idf_component.yml
main/lib/: DEV_Config.h  EPD.h
main/lib/utility/: EPD_5in65f.h
